Fixed long word not wrapping bug
Former-commit-id: 2a594caff7c21a820512fb44a2f386834b8efd6e

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -249,6 +249,7 @@ nav ul li ul li {
 
 .post-content {
   text-align: justify;
+  overflow-wrap: break-word;
 }
 
 .custom-heading{
